feat: implement documents delete related endpoints
